<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    tools:context="com.shbhmnagar.freestylewrestling.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/red"
        android:onClick="penaltyA"
        android:text="@string/penalty"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:background="@color/blue"
        android:onClick="penaltyB"
        android:text="@string/penalty"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/size64dp"
            android:layout_height="@dimen/size64dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/mainlogo3" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="@dimen/size256dp"
                android:layout_height="@dimen/size256dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/scorematt" />

            <LinearLayout
                android:layout_width="@dimen/size256dp"
                android:layout_height="@dimen/size256dp"
                android:gravity="center_vertical"
                android:padding="56dp">

                <TextView
                    android:id="@+id/playerA_Score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:text="@string/initial"
                    android:textColor="@color/red"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/playerB_Score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:text="@string/initial"
                    android:textColor="@color/blue"
                    android:textSize="28sp" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/red"
                        android:onClick="pinA"
                        android:text="@string/pin"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="@dimen/size64dp"
                        android:layout_height="@dimen/size64dp"
                        android:layout_marginRight="4dp"
                        android:background="@color/red"
                        android:onClick="addOnePointA"
                        android:text="@string/onepoint"
                        android:textColor="@android:color/white" />

                    <Button
                        android:layout_width="@dimen/size64dp"
                        android:layout_height="@dimen/size64dp"
                        android:background="@color/red"
                        android:onClick="addTwoPointA"
                        android:text="@string/twopoint"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="@dimen/size64dp"
                        android:layout_height="@dimen/size64dp"
                        android:layout_marginRight="4dp"
                        android:background="@color/red"
                        android:onClick="addFourPointA"
                        android:text="@string/fourpoint"
                        android:textColor="@android:color/white" />

                    <Button
                        android:layout_width="@dimen/size64dp"
                        android:layout_height="@dimen/size64dp"
                        android:background="@color/red"
                        android:onClick="addFivePointA"
                        android:text="@string/fivepoint"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/blue"
                        android:onClick="pinB"
                        android:text="@string/pin"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="@dimen/size64dp"
                        android:layout_height="@dimen/size64dp"
                        android:layout_marginRight="4dp"
                        android:background="@color/blue"
                        android:onClick="addOnePointB"
                        android:text="@string/onepoint"
                        android:textColor="@android:color/white" />

                    <Button
                        android:layout_width="@dimen/size64dp"
                        android:layout_height="@dimen/size64dp"
                        android:background="@color/blue"
                        android:onClick="addTwoPointB"
                        android:text="@string/twopoint"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="@dimen/size64dp"
                        android:layout_height="@dimen/size64dp"
                        android:layout_marginRight="4dp"
                        android:background="@color/blue"
                        android:onClick="addFourPointB"
                        android:text="@string/fourpoint"
                        android:textColor="@android:color/white" />

                    <Button
                        android:layout_width="@dimen/size64dp"
                        android:layout_height="@dimen/size64dp"
                        android:background="@color/blue"
                        android:onClick="addFivePointB"
                        android:text="@string/fivepoint"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:onClick="resetWholeScore"
            android:text="Reset"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:background="@color/reset"/>

    </LinearLayout>

</RelativeLayout>

